@@ -1,14 +1,16 @@
 package cash.andrew.mntrailconditions.ui.trails
 
 import org.threeten.bp.Instant
+import org.threeten.bp.LocalDateTime
 import org.threeten.bp.ZoneId
+import org.threeten.bp.ZoneOffset
 import trail.networking.model.TrailInfo
 
 data class TrailViewModel(
   val name: String,
   val status: String,
   val description: String,
-  val updatedAt: Instant,
+  val updatedAt: LocalDateTime,
   val twitterAccount: String?,
   val mountainProjectUrl: String?,
   val facebookUrl: String?
@@ -20,7 +22,7 @@ fun TrailInfo.toViewModel() = TrailViewModel(
   name = name,
   status = status,
   description = description,
-  updatedAt = Instant.ofEpochMilli(lastUpdated).atZone(ZoneId.systemDefault()).toInstant(),
+  updatedAt = LocalDateTime.ofInstant(Instant.ofEpochMilli(lastUpdated), ZoneOffset.UTC),
   twitterAccount = twitterAccount,
   facebookUrl = facebookUrl,
   mountainProjectUrl = mtbProjectUrl
